--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,2 @@
 spring.data.mongodb.uri=mongodb+srv://userxd:passxd@cluster0.3z6fa.mongodb.net/taller-citas?retryWrites=true&w=majority
+server.port = 8080
